--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,21 @@
+.App {
+  font-family: 'Spectral', serif;
+  -webkit-animation: name 1s; /* Safari, Chrome and Opera > 13.1 */
+  -moz-animation: name 1s; /* Firefox < 16 */
+  -ms-animation: name 1s; /* Internet Explorer */
+  -o-animation: name 1s; /* Opera < 13.1 */
+  animation: name 1s;
+}
+
 .Footer {
   background-color: blue;
   height: 50px;
   margin: 0;
-
 }
 
 .Home {
   background-color: ghostwhite;
-  height: 200vh;
+  height: auto;
   margin: 0;
   padding: 0;
 }
@@ -15,25 +23,55 @@
 .Head {
   display: flex;
   margin: auto;
+  border-bottom: 1px solid lightgreen;
+  width: 90%;
+
 }
 
-.Head a {
+.A {
+  display: flex;
+  margin: auto;
+  width: 30%;
+}
+
+.A a {
   text-decoration: none;
   color: black;  
+  width: auto;
   margin: auto;
+  transition: all .4s ease-in-out;
+}
+
+.A a:hover {
+  transform: scale(1.5);
+  color: lightgreen;
 }
 
 #name {
   font-size: 5rem;
-  color: slategray;
+  /* color: slategray; */
   margin-left: 5%;
-  margin-top: 2%;
-  -webkit-animation: name 3s; /* Safari, Chrome and Opera > 13.1 */
-  -moz-animation: name 3s; /* Firefox < 16 */
-  -ms-animation: name 3s; /* Internet Explorer */
-  -o-animation: name 3s; /* Opera < 13.1 */
-  animation: name 3s;
+  margin-top: 4%;
+  /* -webkit-animation: name 3s; /* Safari, Chrome and Opera > 13.1 */
+  /* -moz-animation: name 3s; Firefox < 16 */
+  /* -ms-animation: name 3s; Internet Explorer */
+  /* -o-animation: name 3s; Opera < 13.1 */
+  /* animation: name 3s; */ 
   width: 50%;
+  
+}
+
+#name h2 {
+  font-size: 3rem;
+  margin-left: 5%;
+  margin-top: -2%;
+  text-decoration: none;
+}
+
+.Head .Email {
+  font-size: 2rem;
+  margin-top: -1%;
+
 }
 
 #top {
@@ -41,6 +79,7 @@
   background-color: red;
   height: 20rem;
   margin: 0% 10%;
+  
 }
 
 .boxes {
@@ -50,54 +89,109 @@
   height: 80%;
   background-color: blue;
   margin: auto
-
 }
 
 .stack {
-  background-color: red;
   height: 15rem;
   margin: 3% 10%;
+  margin-bottom: 13%;
+  
 }
 
 .techs {
   display: flex;
   height: 10rem;
-  background-color: yellow;
   justify-content: space-evenly;
+  
 }
 
 .tech {
   width: 15%;
-  background-color: blue;
   text-align: center;
   height: 10rem;
-  border: 2px solid black;
+}
+
+.tech h3 {
+  font-size: 1.5rem;
+}
+
+.tech i {
+  -ms-transition: .7s ease-in-out;
+  -webkit-transition: .7s ease-in-out;
+}
+
+.tech i:hover {
+  -ms-transform: rotate(360deg); /* IE 9 */
+  -webkit-transform: rotate(360deg); /* Chrome, Safari, Opera */
+  transform: rotate(360deg);
+  color: lightgreen;
 }
 
 .stack h1 {
   text-align: center;
+  font-size: 3rem;
+  padding-bottom: 2%;;
+  border-bottom: 1px solid lightgreen;
+}
 
+.main {
+  border-bottom: 1px solid lightgreen;
 }
 
 .bottom {
-  margin: 0 10%;
-  background-color: cyan;
+  margin: 10%;
+  margin-bottom: 10%;
+  margin-top: 15%;
+  padding-bottom: 5%;
+  border-top: 1px solid lightgreen;
+  border-bottom: 1px solid lightgreen;
 }
 
 .bottom h1 {
   text-align: center;
+  font-size: 3rem;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
 .projects {
-  background-color: green;
-  height: 60rem;
-  
+  /* background-color: red; */
+  height: 50%;
 }
 
 .project {
   display: flex;
-  height: 25%;
   justify-content: space-between;
+  margin: auto;
+  margin-top: 8%;
+  height: 40vh;
+}
+
+.project img {
+  max-width: 40%;
+  border-radius: 1%;
+}
+
+.Description a {
+  text-decoration: none;
+  color: black;
+  transition: all .2s ease-in-out;
+
+}
+
+.Description a:hover {
+  transform: scale(1.5);
+  color: lightgreen;
+}
+
+.Description {
+  margin-top: -2%;
+  text-align: center;
+}
+
+.Description p {
+  margin: -5% 5%;
+  font-size: 1.2rem;
 }
 
 @keyframes name {
@@ -107,13 +201,13 @@
 
 
 .About {
-  background-color: green;
+  /* background-color: green; */
   height: 90vh;
   margin: 0;
 }
 
 .App {
-  background-color: yellow;
+  background-color: black;
   display:flex;
   flex-direction: column;
 }
