--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,10 @@
   -o-animation: name 1s; /* Opera < 13.1 */
   animation: name 1s;
   background-color: ghostwhite;
+  height: 100%;
+  width: 100%;
 }
 
-.Footer {
-  background-color: blue;
-  height: 50px;
-  margin: 0;
-}
 
 .Home {
   background-color: ghostwhite;
@@ -26,13 +23,17 @@
   margin: auto;
   border-bottom: 1px solid lightgreen;
   width: 90%;
+  justify-content: space-between;
 
 }
 
 .A {
   display: flex;
-  margin: auto;
-  width: 30%;
+  margin-left:30%;
+  width: 20%;
+  margin: 0;
+
+  
 }
 
 .A a {
@@ -41,6 +42,7 @@
   width: auto;
   margin: auto;
   transition: all .4s ease-in-out;
+  
 }
 
 .A a:hover {
@@ -49,9 +51,9 @@
 }
 
 #name {
-  font-size: 5rem;
+  font-size: 4rem;
   /* color: slategray; */
-  margin-left: 5%;
+  /* margin-left: 5%; */
   margin-top: 4%;
   /* -webkit-animation: name 3s; /* Safari, Chrome and Opera > 13.1 */
   /* -moz-animation: name 3s; Firefox < 16 */
@@ -63,7 +65,7 @@
 }
 
 #name h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   margin-left: 5%;
   margin-top: -2%;
   text-decoration: none;
@@ -76,15 +78,14 @@
 }
 
 .stack {
-  height: 15rem;
+  /* height: 15rem; */
   margin: 3% 10%;
-  margin-bottom: 13%;
-  
+  /* margin-bottom: 13%; */
 }
 
 .techs {
   display: flex;
-  height: 10rem;
+  /* height: 10rem; */
   justify-content: space-evenly;
   
 }
@@ -92,7 +93,7 @@
 .tech {
   width: 15%;
   text-align: center;
-  height: 10rem;
+  /* height: 10rem; */
 }
 
 .tech h3 {
@@ -114,18 +115,14 @@
 .stack h1 {
   text-align: center;
   font-size: 3rem;
-  padding-bottom: 2%;;
-  border-bottom: 1px solid lightgreen;
-}
-
-.main {
+  padding-bottom: 2%;
   border-bottom: 1px solid lightgreen;
 }
 
 .bottom {
   margin: 10%;
   margin-bottom: 10%;
-  margin-top: 15%;
+  /* margin-top: 15%; */
   padding-bottom: 5%;
   border-top: 1px solid lightgreen;
   border-bottom: 1px solid lightgreen;
@@ -139,7 +136,6 @@
 }
 
 .projects {
-  /* background-color: red; */
   height: 50%;
 }
 
@@ -148,7 +144,7 @@
   justify-content: space-between;
   margin: auto;
   margin-top: 8%;
-  height: 40vh;
+  height: 40%;
 }
 
 .project img {
@@ -183,11 +179,9 @@
   to   { opacity: 1; }
 }
 
-
 .About {
   background-color: ghostwhite;
-  height: 100vh;
-  
+  height: 100%
 }
 
 .About-Title {
@@ -196,16 +190,15 @@
   margin: auto;
   margin-bottom: -2%;
   margin-top: -2%;
-
-  /* background-color: red; */
 }
 
 #top {
   border-top: 1px solid lightgreen;
   display: flex;
-  height: 50rem;
+  height: 50%;
   margin: 0% 10%;
-  
+  margin-bottom: 10%;
+
 }
 
 .boxes {
@@ -218,10 +211,24 @@
 
 .boxes img {
   height: 100%;
-  border-radius: 2%;;
+  border-radius: 2%;
 }
 
 .boxes p {
-  font-size: 1.4rem;
-  margin-top: 7%
+  font-size: 1.4em;
+  margin-top: 7%;
+  background-color: red;
+
 }
+
+.boxes img {
+  width: 20rem;
+}
+
+#footerbar {
+  overflow: hidden;
+  background-color: #333;
+  color: #f2f2f2;
+  text-align: center;
+  bottom: auto;
+} 
