--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,8 @@
 .project img {
   max-width: 40%;
   border-radius: 1%;
+  max-height: 10%;
+  margin-top: 3%;
 }
 
 .Description a {
@@ -217,7 +219,6 @@
 .boxes p {
   font-size: 1.4em;
   margin-top: 7%;
-  background-color: red;
 
 }
 
