--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -25,3 +25,9 @@
 #navbar a:hover {
     color: lightgreen;
 }
+
+@media only screen and (max-width: 600px) {
+    #navbar {
+      width: 100vw;
+    }
+  }
