--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,13 @@
   text-decoration: none;
   color: black;
   transition: all .2s ease-in-out;
+  margin-right: 2%;
+}
 
+.Description .Project-title:hover {
+  transform: scale(1.5);
+  color: lightgreen;
+  text-decoration: underline;
 }
 
 .Description a:hover {
@@ -185,6 +191,7 @@
   width: 40%;
   height: 80%;
   margin: auto;
+  margin-top: 2%;
 }
 
 .boxes img {
@@ -193,13 +200,13 @@
 }
 
 .boxes p {
-  font-size: 1.4em;
-  margin-top: 7%;
+  font-size: 1.25em;
 
 }
 
 .boxes img {
   width: 20rem;
+  margin-top: 5%;
 }
 
 #footerbar {
