--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -18,6 +18,7 @@
     padding: 1%;
     margin-left: 2%;
     text-decoration: none;
+    font-size: 1.3rem;
     -ms-transition: .2s ease-in-out;
     -webkit-transition: .2s ease-in-out;
 }
